--- a/assets/global.css
+++ b/assets/global.css
@@ -3,7 +3,10 @@
 }
 
 :root {
-  
+  --background-modal-primary-color: rgb(31,130,209);
+  --background-modal-secondary-color: rgb(69,176,193)
+  --background-gradient-modal: linear-gradient(180deg, rgba(31,130,209,1) 7%, rgba(65,171,195,1) 78%);
+  --modal-circles: rgb(233,233,11)
 }
 
 
@@ -12,22 +15,23 @@
   height: 100vh;
   display: flex;
   flex-flow: column;
+  align-items: center;
   justify-content: space-between;
+  background: var(--background-modal-primary-color);
+  background: linear-gradient(180deg, rgba(31,130,209,1) 7%, rgba(65,171,195,1) 78%);
+  color: white;
 }
 
 .landingPageModal > header > hr {
   width: 90vw;
-  height: 1px;
-  background-color: aqua;
+  height: 2px;
+  border: none;
+  background-color: white;
 }
 
 .landingPageModal > header{
   display: flex;
   flex-flow: column;
-}
-.landingPageModal > header > span {
-  padding-top: 1rem;
-  margin: 0 auto;
 }
 
 .landingPageModal > header > h1 {
@@ -48,7 +52,29 @@
   width: 100vw;
   height: 3.5rem;
   font-size: 1.5rem;
-  background-color: white;
+  background-color: var(--background-modal-color);
+  color: white;
   border: none;
-  border-top: .2rem solid red;
+  border-top: .2rem solid white;
+}
+
+
+.landingPageModal > section {
+  position: absolute;
+  top: calc(50% - 31vh);
+}
+
+
+.circleContainer {
+  padding-top: 1.5rem;
+  display: flex;
+  justify-content: center;
+}
+
+.circleContainer > span {
+  background-color: #c4c4c4;
+  border-radius: 100%;
+  height: 10px;
+  width: 10px;
+  margin-left: .3rem;
 }
